WIP: adding feature with GetSymbolAddr

--- a/binary/testdata/linux_amd64/Makefile
+++ b/binary/testdata/linux_amd64/Makefile
@@ -1,7 +1,7 @@
 CC := gcc
 TARGET := main
 
-all: dynamic_$(TARGET) static_$(TARGET) no_pie_$(TARGET) no_defs_$(TARGET) partial_relro_$(TARGET)
+all: dynamic_$(TARGET) static_$(TARGET) no_pie_$(TARGET) no_defs_$(TARGET)
 
 dynamic_$(TARGET): main.c
 	$(CC) -o $@ $<
@@ -14,9 +14,6 @@ no_pie_$(TARGET): main.c
 
 no_defs_$(TARGET): main.c
 	$(CC) -fno-stack-protector -no-pie -z execstack -Wl,-z,norelro -o $@ $<
-
-partial_relro_$(TARGET): main.c
-	$(CC) -Wl,-z,relro -o $@ $<
 	
 clean:
-	rm -f dynamic_$(TARGET) static_$(TARGET) no_pie_$(TARGET) no_defs_$(TARGET) partial_relro_$(TARGET)
+	rm -f dynamic_$(TARGET) static_$(TARGET) no_pie_$(TARGET) no_defs_$(TARGET)
