cli: add info cmd

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,6 +1,6 @@
 APP_NAME := gowncli
 MODULE   := github.com/Jacute/gowntools
-VERSION  := $(shell git describe --tags || echo "dev")
+VERSION  := $(shell git describe --tags || echo "v.dev")
 
 LDFLAGS := -s -w \
 	-X 'github.com/Jacute/gowntools/cli/cmd.Version=$(VERSION)' \
