fix: tests; add binInfo print test

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -6,7 +6,12 @@ LDFLAGS := -s -w \
 	-X 'github.com/Jacute/gowntools/cli/cmd.Version=$(VERSION)' \
 	-X 'github.com/Jacute/gowntools/cli/cmd.Module=$(MODULE)'
 
-.PHONY: build clean
+.PHONY: build clean install
+
+BINARY=gowncli
+
+install:
+	go install .
 
 build:
 	go build -ldflags "$(LDFLAGS)" -o bin/$(APP_NAME)
