--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: '1.25.4'
       
+      - name: Install nasm
+        run: sudo apt-get update && sudo apt-get install -y nasm
+      
       - name: Install gocovmerge
         run: go install github.com/wadey/gocovmerge@latest
 
